添加check API和更新swagger文档
Commit by Andy.Zhang
Email: ztao8607@gmail.com
