# server/qcloud/cluster.go
@@ -4,34 +4,34 @@ import (
 	"github.com/andy-zhangtao/qcloud_api/v1/cvm"
 	"github.com/andy-zhangtao/qcloud_api/v1/public"
 	"net/http"
-	"github.com/andy-zhangtao/DDog/server"
 	"errors"
 	"encoding/json"
+	"github.com/andy-zhangtao/DDog/server/tool"
 )
 
 func GetClusterNodes(w http.ResponseWriter, r *http.Request) {
 
 	sid := r.Header.Get("secretId")
 	if sid == "" {
-		server.ReturnError(w, errors.New("SecretId Can not be empty"))
+		tool.ReturnError(w, errors.New("SecretId Can not be empty"))
 		return
 	}
 
 	key := r.Header.Get("secretKey")
 	if key == "" {
-		server.ReturnError(w, errors.New("SecretKey Can not be empty"))
+		tool.ReturnError(w, errors.New("SecretKey Can not be empty"))
 		return
 	}
 
 	region := r.Header.Get("region")
 	if region == "" {
-		server.ReturnError(w, errors.New("Region Can not be empty"))
+		tool.ReturnError(w, errors.New("Region Can not be empty"))
 		return
 	}
 
 	cid := r.Header.Get("clusterid")
 	if cid == "" {
-		server.ReturnError(w, errors.New("Clusterid Can not be empty"))
+		tool.ReturnError(w, errors.New("Clusterid Can not be empty"))
 		return
 	}
 
@@ -54,13 +54,13 @@ func GetClusterNodes(w http.ResponseWriter, r *http.Request) {
 
 	nodes, err := q.QueryClusterNodes()
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	data, err := json.Marshal(nodes)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
