# server/svcconf/config.go
@@ -6,7 +6,7 @@ import (
 	"errors"
 	"github.com/andy-zhangtao/DDog/const"
 	"io/ioutil"
-	"github.com/andy-zhangtao/DDog/server"
+	"github.com/andy-zhangtao/DDog/server/tool"
 	"encoding/json"
 	"github.com/andy-zhangtao/DDog/server/mongo"
 )
@@ -44,7 +44,7 @@ func CreateSvcConf(w http.ResponseWriter, r *http.Request) {
 	data, err := ioutil.ReadAll(r.Body)
 	defer r.Body.Close()
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
@@ -52,18 +52,18 @@ func CreateSvcConf(w http.ResponseWriter, r *http.Request) {
 
 	err = json.Unmarshal(data, &conf)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	if err = checkConf(conf); err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	cf, err := mongo.GetSvcConfByName(conf.Name, conf.Namespace)
 	if cf != nil {
-		server.ReturnError(w, errors.New(_const.SvcConfExist))
+		tool.ReturnError(w, errors.New(_const.SvcConfExist))
 		return
 	}
 
@@ -73,7 +73,7 @@ func CreateSvcConf(w http.ResponseWriter, r *http.Request) {
 
 	conf.Id = bson.NewObjectId()
 	if err = mongo.SaveSvcConfig(conf); err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 	w.Write([]byte(conf.Id.Hex()))
@@ -83,7 +83,7 @@ func CreateSvcConf(w http.ResponseWriter, r *http.Request) {
 func GetSvcConf(w http.ResponseWriter, r *http.Request) {
 	nsme := r.URL.Query().Get("namespace")
 	if nsme == "" {
-		server.ReturnError(w, errors.New(_const.NamespaceNotFound))
+		tool.ReturnError(w, errors.New(_const.NamespaceNotFound))
 		return
 	}
 
@@ -92,26 +92,26 @@ func GetSvcConf(w http.ResponseWriter, r *http.Request) {
 	if id == "" {
 		conf, err := mongo.GetSvcConfNs(nsme)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 
 		data, err := json.Marshal(conf)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 		w.Write(data)
 	} else {
 		conf, err := mongo.GetSvcConfByID(id)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 
 		data, err := json.Marshal(conf)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 		w.Write(data)
@@ -126,18 +126,18 @@ func DeleteSvcConf(w http.ResponseWriter, r *http.Request) {
 	if id == "" {
 		nsme := r.URL.Query().Get("namespace")
 		if nsme == "" {
-			server.ReturnError(w, errors.New(_const.NamespaceNotFound))
+			tool.ReturnError(w, errors.New(_const.NamespaceNotFound))
 			return
 		}
 		err := mongo.DeleteSvcConfByNs(nsme)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 	} else {
 		err := mongo.DeleteSvcConfById(id)
 		if err != nil {
-			server.ReturnError(w, err)
+			tool.ReturnError(w, err)
 			return
 		}
 	}
@@ -168,25 +168,25 @@ func checkConf(conf SvcConf) error {
 func UpgradeSvcConf(w http.ResponseWriter, r *http.Request) {
 	cid := r.URL.Query().Get("id")
 	if cid == "" {
-		server.ReturnError(w, errors.New(_const.IDNotFound))
+		tool.ReturnError(w, errors.New(_const.IDNotFound))
 		return
 	}
 
 	c, err := mongo.GetSvcConfByID(cid)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	conf, err := conver(c)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	data, err := ioutil.ReadAll(r.Body)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
@@ -194,7 +194,7 @@ func UpgradeSvcConf(w http.ResponseWriter, r *http.Request) {
 
 	err = json.Unmarshal(data, &nc)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
@@ -203,14 +203,14 @@ func UpgradeSvcConf(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if nc.Netconf.Protocol != 0 && nc.Netconf.Protocol != 1 {
-		server.ReturnError(w, errors.New(_const.LbProtocolError))
+		tool.ReturnError(w, errors.New(_const.LbProtocolError))
 		return
 	} else {
 		conf.Netconf.Protocol = nc.Netconf.Protocol
 	}
 
 	if nc.Netconf.InPort == 0 || nc.Netconf.OutPort == 0 {
-		server.ReturnError(w, errors.New(_const.LbPortError))
+		tool.ReturnError(w, errors.New(_const.LbPortError))
 		return
 	} else if nc.Netconf.InPort > 0 {
 		conf.Netconf.InPort = nc.Netconf.InPort
@@ -219,7 +219,7 @@ func UpgradeSvcConf(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if nc.Netconf.AccessType != 0 && nc.Netconf.AccessType != 1 && nc.Netconf.AccessType != 2 {
-		server.ReturnError(w, errors.New(_const.AccessTypeError))
+		tool.ReturnError(w, errors.New(_const.AccessTypeError))
 		return
 	} else {
 		conf.Netconf.AccessType = nc.Netconf.AccessType
@@ -227,13 +227,13 @@ func UpgradeSvcConf(w http.ResponseWriter, r *http.Request) {
 
 	err = mongo.DeleteSvcConfById(conf.Id.Hex())
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 
 	err = mongo.SaveSvcConfig(conf)
 	if err != nil {
-		server.ReturnError(w, err)
+		tool.ReturnError(w, err)
 		return
 	}
 	w.Write([]byte(conf.Id.Hex()))
@@ -269,5 +269,93 @@ func GetSvcConfByID(id string) (cf SvcConf, err error) {
 		return
 	}
 
+	return
+}
+
+func GetSvcConfByName(name, ns string) (cf SvcConf, err error) {
+	conf, err := mongo.GetSvcConfByName(name, ns)
+	if err != nil {
+		return
+	}
+
+	data, err := bson.Marshal(conf)
+	if err != nil {
+		return
+	}
+
+	err = bson.Unmarshal(data, &cf)
+	if err != nil {
+		return
+	}
+
+	return
+}
+func CheckSvcConf(w http.ResponseWriter, r *http.Request) {
+	data, err := ioutil.ReadAll(r.Body)
+	defer r.Body.Close()
+	if err != nil {
+		tool.ReturnError(w, err)
+		return
+	}
+
+	var conf SvcConf
+
+	err = json.Unmarshal(data, &conf)
+	if err != nil {
+		tool.ReturnError(w, err)
+		return
+	}
+
+	if err = checkConf(conf); err != nil {
+		tool.ReturnError(w, err)
+		return
+	}
+
+	rm := _const.RespMsg{
+		Code: 1000,
+		Msg:  "SvcConfig Upgrade",
+	}
+
+	cf, err := mongo.GetSvcConfByName(conf.Name, conf.Namespace)
+	if cf == nil {
+		if conf.Replicas == 0 {
+			conf.Replicas = 1
+		}
+
+		conf.Id = bson.NewObjectId()
+		if err = mongo.SaveSvcConfig(conf); err != nil {
+			tool.ReturnError(w, err)
+			return
+		}
+		rm.Code = 1001
+		rm.Msg = "Create New SvcConfig"
+	}else{
+		nc, err := conver(cf)
+		if err != nil{
+			tool.ReturnError(w, err)
+			return
+		}
+
+		err = mongo.DeleteSvcConfById(nc.Id.Hex())
+		if err != nil {
+			tool.ReturnError(w, err)
+			return
+		}
+
+		conf.Id = nc.Id
+		if err = mongo.SaveSvcConfig(conf); err != nil {
+			tool.ReturnError(w, err)
+			return
+		}
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	data, err = json.Marshal(&rm)
+	if err != nil {
+		tool.ReturnError(w, err)
+		return
+	}
+
+	w.Write(data)
 	return
 }
